fix: improve code rendering container and increase letter spacing

--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -18,8 +18,8 @@
   --font-size-16: 1rem;
   --font-size-14: 0.875rem;
 
-  --letter-spacing-title: -2.88px;
-  --letter-spacing-subtitle: -1.44px;
+  --letter-spacing-title: -0.54px;
+  --letter-spacing-subtitle: -0.54px;
   --letter-spacing-body: -0.54px;
 
   --line-height-title: 105%;
